<resources>
    <string name="app_name">clase3-CicloDeVida</string>
    <string name="textoPrincipal">Login</string>
    <string name="labelUsuario">Usuario:</string>
    <string name="labelcontrasena">Contraseña:</string>
    <string name="labelingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="labelBienvenido">Bienvenido</string>
    <string name="labelAbrir">Abrir</string>
    <string name="labelTelefono">Telefono</string>
</resources>