<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoPrincipal"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            ></TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelUsuario"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            ></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:textSize="15sp"
            android:id="@+id/usuario"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >


        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelcontrasena"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            ></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:textSize="15sp"
            android:id="@+id/contrasena"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:inputType="textPassword"
            >


        </EditText>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/labelingresar"
        android:backgroundTint="@color/black"
        android:id="@+id/ingresar"
        ></Button>

</LinearLayout>