<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla2"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/labelBienvenido"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"

            ></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/nombreusuarioPantalla2"
            ></TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/labelUsuario"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"

            ></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/usuarioPantalla2"
            ></TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/labelcontrasena"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"

            ></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/clavePantalla2"
            ></TextView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelTelefono"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        ></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labelTelefono"
        android:textSize="15sp"
        android:id="@+id/telefono"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        >


    </EditText>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/labelAbrir"
        android:backgroundTint="@color/black"
        android:id="@+id/abrir"
        ></Button>

</LinearLayout>